welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:5: error: value lenth is not a member of Array[Int]
	if(nums.lenth <= 4)
                ^arrayFront9:7: error: value lenth is not a member of Array[Int]
		searchArea = nums.lenth;
                                  ^